--- a/index.html
+++ b/index.html
@@ -102,6 +102,7 @@
       <div class="row">
         <div class="col s12 l4">
           <img
+            loading="lazy"
             src="img/portrait.jpg"
             alt=""
             class="responsive-img materialboxed"
@@ -117,7 +118,12 @@
       </div>
       <div class="row">
         <div class="col s12 l4 push-l7 offset-l1">
-          <img src="img/city.jpg" alt="" class="responsive-img materialboxed" />
+          <img
+            src="img/city.jpg"
+            loading="lazy"
+            alt=""
+            class="responsive-img materialboxed"
+          />
         </div>
         <div class="col s12 l6 pull-l5 right-align offset-l1">
           <h2 class="indigo-text text-darken-4">Cityscapes</h2>
@@ -130,6 +136,7 @@
       <div class="row">
         <div class="col s12 l4">
           <img
+            loading="lazy"
             src="img/nature.jpg"
             alt=""
             class="responsive-img materialboxed"
@@ -148,7 +155,12 @@
     <!-- parallax -->
     <div class="parallax-container">
       <div class="parallax">
-        <img src="img/street.jpg" class="responsive-img" alt="" />
+        <img
+          loading="lazy"
+          src="img/street.jpg"
+          class="responsive-img"
+          alt=""
+        />
       </div>
     </div>
 
@@ -208,7 +220,7 @@
     <!-- parallax -->
     <div class="parallax-container">
       <div class="parallax">
-        <img src="img/stars.jpg" class="responsive-img" alt="" />
+        <img src="img/stars.jpg" loading="lazy" class="responsive-img" alt="" />
       </div>
     </div>
 
@@ -335,6 +347,12 @@
         var tooltip = document.querySelectorAll(".tooltipped");
         M.Tooltip.init(tooltip);
       });
+      if ("serviceWorker" in navigator) {
+        // Use the window load event to keep the page load performant
+        window.addEventListener("load", () => {
+          navigator.serviceWorker.register("/service-worker.js");
+        });
+      }
     </script>
   </body>
 </html>
